--- a/BetAndRuin 21/src/Etiquetas_en.properties
+++ b/BetAndRuin 21/src/Etiquetas_en.properties
@@ -6,6 +6,7 @@ ErrorEventHasFinished=Error\: Event Has Finished
 ErrorNumber=Error\: Introduce a positive number
 ErrorQuestionAlreadyExist=Error\: Question Already Exists
 ErrorQuestion=Error\: Introduce a question
+ErrorAnswer=Error\: Introduce a answer
 Event=Event
 EventDate=Event Date
 EventN=Event\#
