Language related final details sharpened

--- a/BetAndRuin 21/src/Etiquetas_en.properties
+++ b/BetAndRuin 21/src/Etiquetas_en.properties
@@ -24,3 +24,4 @@ QuestionCreated=Question created
 QuestionN=Question\#
 SelectedEvent=Questions for the event
 SelectUseCase=Select Use Case
+ViewProfile=View Profile
