--- a/BetAndRuin 21/src/Etiquetas_es.properties
+++ b/BetAndRuin 21/src/Etiquetas_es.properties
@@ -23,3 +23,4 @@ QuestionCreated=Pregunta creada
 QuestionN=#Pregunta
 SelectedEvent=Preguntas para el evento:  
 SelectUseCase=Seleccionar Caso de Uso
+ViewProfile=Ver Perfil
