Logout etiquette up and running

--- a/BetAndRuin 21/src/Etiquetas_en.properties
+++ b/BetAndRuin 21/src/Etiquetas_en.properties
@@ -25,3 +25,4 @@ QuestionN=Question\#
 SelectedEvent=Questions for the event
 SelectUseCase=Select Use Case
 ViewProfile=View Profile
+Logout=Logout
