--- a/BetAndRuin 21/src/Etiquetas_es.properties
+++ b/BetAndRuin 21/src/Etiquetas_es.properties
@@ -24,3 +24,4 @@ QuestionN=#Pregunta
 SelectedEvent=Preguntas para el evento:  
 SelectUseCase=Seleccionar Caso de Uso
 ViewProfile=Ver Perfil
+Logout=Cerrar sesion
