Minimum Bet added to BrowseQuestionGUI

--- a/BetAndRuin 21/src/Etiquetas_es.properties
+++ b/BetAndRuin 21/src/Etiquetas_es.properties
@@ -21,6 +21,7 @@ Question=Pregunta
 QuestionAlreadyExist=La pregunta ya existe
 QuestionCreated=Pregunta creada
 QuestionN=#Pregunta
+MinimumBet=Minimo
 SelectedEvent=Preguntas para el evento:  
 SelectUseCase=Seleccionar Caso de Uso
 ViewProfile=Ver Perfil
