--- a/BetAndRuin 21/src/Etiquetas_en.properties
+++ b/BetAndRuin 21/src/Etiquetas_en.properties
@@ -22,6 +22,7 @@ Question=Question
 QuestionAlreadyExist=Question Already Exists
 QuestionCreated=Question created
 QuestionN=Question\#
+MinimumBet=Min Bet
 SelectedEvent=Questions for the event
 SelectUseCase=Select Use Case
 ViewProfile=View Profile
