--- a/BetAndRuin 21/src/Etiquetas_en.properties
+++ b/BetAndRuin 21/src/Etiquetas_en.properties
@@ -6,7 +6,7 @@ ErrorEventHasFinished=Error\: Event Has Finished
 ErrorNumber=Error\: Introduce a positive number
 ErrorQuestionAlreadyExist=Error\: Question Already Exists
 ErrorQuestion=Error\: Introduce a question
-ErrorAnswer=Error\: Introduce a answer
+ErrorAnswer=Error\: Introduce a answer and a rate
 Event=Event
 EventDate=Event Date
 EventN=Event\#
@@ -23,6 +23,9 @@ QuestionAlreadyExist=Question Already Exists
 QuestionCreated=Question created
 QuestionN=Question\#
 MinimumBet=Min Bet
+Answer=Answer
+AnswerN=Answer#
+Rate=Rate(%)
 SelectedEvent=Questions for the event
 SelectUseCase=Select Use Case
 ViewProfile=View Profile
