--- a/BetAndRuin 21/src/Etiquetas_es.properties
+++ b/BetAndRuin 21/src/Etiquetas_es.properties
@@ -6,6 +6,7 @@ ErrorEventHasFinished=Error\: El evento ha finalizado
 ErrorNumber=Error: Introduce un número positivo
 ErrorQuestion=Error: Introduce una pregunta
 ErrorQuestionAlreadyExist=Error: La pregunta ya existe
+ErrorAnswer=Error\: Introduce una respuesta y un porcentaje
 Event=Evento
 EventDate=Fecha evento
 EventN=Evento#
@@ -22,6 +23,9 @@ QuestionAlreadyExist=La pregunta ya existe
 QuestionCreated=Pregunta creada
 QuestionN=#Pregunta
 MinimumBet=Minimo
+Answer=Respuesta
+AnswerN=Respuesta#
+Rate=Porciento(%)
 SelectedEvent=Preguntas para el evento:  
 SelectUseCase=Seleccionar Caso de Uso
 ViewProfile=Ver Perfil
