Insert Results GUI and buttons created/managed

--- a/BetAndRuin 21/src/Etiquetas_en.properties
+++ b/BetAndRuin 21/src/Etiquetas_en.properties
@@ -29,4 +29,5 @@ Rate=Rate(%)
 SelectedEvent=Questions for the event
 SelectUseCase=Select Use Case
 ViewProfile=View Profile
+btnInsertResults=Insert Results
 Logout=Logout
