--- a/BetAndRuin 21/src/Etiquetas_es.properties
+++ b/BetAndRuin 21/src/Etiquetas_es.properties
@@ -28,5 +28,6 @@ AnswerN=Respuesta#
 Rate=Porciento(%)
 SelectedEvent=Preguntas para el evento:  
 SelectUseCase=Seleccionar Caso de Uso
+btnInsertResults=Introducir Resultados
 ViewProfile=Ver Perfil
 Logout=Cerrar sesion
