The question types, done!

--- a/BetAndRuin 21/src/Etiquetas_en.properties
+++ b/BetAndRuin 21/src/Etiquetas_en.properties
@@ -5,6 +5,7 @@ CreateQuestion=Create Question
 ErrorEventHasFinished=Error\: Event Has Finished
 ErrorNumber=Error\: Introduce a positive number
 ErrorQuestionAlreadyExist=Error\: Question Already Exists
+ErrorAnswerAlreadyExist=Error: Answer already exists
 ErrorQuestion=Error\: Introduce a question
 ErrorAnswer=Error\: Introduce a answer and a rate
 Event=Event
