--- a/BetAndRuin 21/src/Etiquetas_es.properties
+++ b/BetAndRuin 21/src/Etiquetas_es.properties
@@ -6,6 +6,7 @@ ErrorEventHasFinished=Error\: El evento ha finalizado
 ErrorNumber=Error: Introduce un número positivo
 ErrorQuestion=Error: Introduce una pregunta
 ErrorQuestionAlreadyExist=Error: La pregunta ya existe
+ErrorAnswerAlreadyExist=Error: La respuesta ya existe
 ErrorAnswer=Error\: Introduce una respuesta y un porcentaje
 Event=Evento
 EventDate=Fecha evento
